--- a/src/view/perfil.html
+++ b/src/view/perfil.html
@@ -100,19 +100,19 @@
                 </div>
                 <div class="read-block">
                     <label for="nomeUsuario">Nome:</label>
-                    <p class="input">{{ nome_Usuario }}</p>
+                    <p class="input">{{ usuario.nome_Usuario }}</p>
                 </div>
                <div class="read-block">
                     <label for="cpfUsuario">CPF:</label>
-                    <p class="input">{{ cpf_Usuario }}</p>
+                    <p class="input">{{ usuario.cpf_Usuario }}</p>
                 </div>
                 <div class="read-block">
                     <label for="telefoneUsuario">Telefone:</label>
-                    <p class="input">{{ telefone_Usuario }}</p>
+                    <p class="input">{{ usuario.telefone_Usuario }}</p>
                 </div>
                 <div class="read-block">
                     <label for="dtNascimento">Data de Nascimento:</label>
-                    <p class="input">{{ dt_Nasc_Usuario }}</p>
+                    <p class="input">{{ usuario.dt_Nasc_Usuario }}</p>
                 </div> 
             </fieldset>
 
@@ -122,11 +122,11 @@
                 </div>
                 <div class="read-block">
                     <label for="emailUsuario">Email:</label>
-                    <p class="input">{{ email }}</p>
+                    <p class="input">{{ usuario.email_Usuario }}</p>
                 </div>
                 <div class="read-block">
                     <label for="funcaoUsuario">Função:</label>
-                    <p class="input">{{ tipo_Usuario }}</p>
+                    <p class="input">{{ usuario.tipo_Usuario }}</p>
                 </div>
             </fieldset>
             
