--- a/src/view/armazemEditar.html
+++ b/src/view/armazemEditar.html
@@ -96,32 +96,39 @@
             </a>
         </h1>
 
-        <form method="UPDATE">
+        <form action="/editarHortalica" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
                     <legend>Dados do Armazém</legend>
                 </div>
                 <div class="read-block">
-                    <label for="nomeHortalca">Nome:</label>
-                    <input type="text" id="nomeHortalica" name="nomeHortalica" value="alface" readonly>
+                    <label for="nomeHortalica">Nome da Hortaliça:</label>
+                    <p class="input">{{hortalica.nome_Hortalica}}</p>
                 </div>
                <div class="write-block">
-                    <label for="quantRestante">Quantidade:</label>
-                    <input type="text" id="quantRestante" name="quantRestante" value="50 pés">
+                    <label for="quantRestante">Quantidade de {{hortalica.nome_Hortalica}} por {{hortalica.contagem_Hortalica}}:</label>
+                    <input type="text" id="quantRestante" name="quantRestante" required>
                 </div>
                 <div class="write-block">
-                    <label for="valor">Valor:</label>
-                    <input type="text" id="valor" name="valor" value="R$ 2.00 por pé">
+                    <label for="valorHortalica">Valor por {{hortalica.contagem_Hortalica}}:</label>
+                    <input type="text" id="valorHortalica" name="valorHortalica" required>
                 </div>
-                <div class="write-block">
-                    <label for="validade">Validade:</label>
-                    <input type="date" id="validade" name="validade" value="2020-10-25">
-                </div> 
+            </fieldset>
+            <fieldset class="dados-Botton">
+                <div class="title">
+                    <legend>Dados da Produção</legend>
+                </div>
+                <div class="read-block">
+                    <label for="nomeColaborador">Nome do {{hortalica.tipo_Usuario}}:</label>
+                    <p class="input">{{hortalica.nome_Usuario}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="tempoProducao">Tempo de Produção:</label>
+                    <p class="input">{{days}} {{contagem}}</p>
+                </div>
             </fieldset>
 
-            <button type="submit" class="button-Salvar">
-                <a href="armazemDetalhe.html">Salvar</a>
-            </button>       
+            <button type="submit" class="button-Salvar">Salvar</button>       
         </form>
 
     </div>
