--- a/src/view/cadastro.html
+++ b/src/view/cadastro.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="read-block">
                     <label for="funcaoUsuario">Função:</label>
-                    <input type="text" id="funcaoUsuario" name="funcaoUsuario"readonly>
+                    <p class="input">Gerente</p>
                 </div>
                 
             </fieldset>
