--- a/src/view/compra.html
+++ b/src/view/compra.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style/main.css">
     <link rel="stylesheet" href="/style/mainStyle.css">
     <link rel="stylesheet" href="/style/pagetable.css">
+    <link rel="stylesheet" href="/style/formStyle.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -89,31 +90,52 @@
     
     <div class="main">
         <h1>Compra</h1>
-        <table>
-            <tr>
-                <th colspan="3">Aguardando entrega...</th>
-            </tr>
-            <tr class="head">
-                <th>Data do Pedido</th>
-                <th>Fornecedor</th>
-                <th></th>
-            </tr>
-            <tr>
-                <td>10/09/2020</td>
-                <td>Adubos Fertipol Indústria e Comércio</td>
-                <td><a href="compraDetalhe.html"> Ver Detalhe</a></td>
-            </tr>
-            <tr>
-                <td>muda de beterraba</td>
-                <td>Toca do Verde</td>
-                <td><a href="compraDetalhe.html"> Ver Detalhe</a></td>
-            </tr>
-            <tr>
-                <td>adubo nitrogênado</td>
-                <td>Bom Cultivo</td>
-                <td><a href="compraDetalhe.html"> Ver Detalhe</a></td>
-            </tr>
-        </table>
+
+        <form action="/detalhePedido" method="POST">
+            <fieldset class="dados-Top">
+                <div class="title">
+                    <legend>Busca do Pedido</legend>
+                </div>
+                <div class="select-block">
+                    <div class="select">
+                        <label for="codPedido">Pedido:</label>
+                        <select name="codPedido" id="codPedido">
+                            <option value="" disable="" hidden="">Selecione uma opção</option> 
+                            {%for pedido in listaPedido%}
+                                <option value={{pedido.cod_Pedido_Compra}}>{{pedido.cod_Pedido_Compra}} - {{pedido.nome_Fornecedor }}</option>
+                            {%endfor%}  
+                        </select>
+                    </div>
+                    <button type="submit" class="salvar">
+                        <img src="/imagem/procurar.png" alt="Buscar">
+                    </button>
+                </div>
+            </fieldset>
+            <fieldset class="dados-Button">
+                <table class="table-Detalhe">
+                    <thead>
+                        <tr>
+                            <th colspan="3">Aguardando entrega...</th>
+                        </tr>
+                        <tr class="head">
+                            <th>Codido do Pedido</th>
+                            <th>Nome do Fornecedor</th>
+                            <th>Data do Pedido</th>
+                        </tr>
+                        <tr>
+                            {%for pedido in listaPedido%}
+                                <tr>
+                                    <td>{{pedido.cod_Pedido_Compra}}</td>
+                                    <td>{{pedido.nome_Fornecedor}}</td>
+                                    <td>{{pedido.dt_Pedido_Compra}}</td>
+                                </tr>   
+                            {%endfor%} 
+                        </tr>
+                    </thead>
+                </table>
+            </fieldset>
+        </form>
+        
         <div class="button-main">
             <a href="/realizarCompra">Comprar</a>
         </div>
